@@ -30,10 +30,10 @@
   </metadata>
 
   <styles>
-    <style id="header-elements" _name="Header Elements" map-to="def:keyword"/>
-    <style id="formatting-elements" _name="Formatting Elements" map-to="def:keyword"/>
-    <style id="gui-elements" _name="GUI Elements" map-to="def:keyword"/>
-    <style id="structural-elements" _name="Structural Elements" map-to="def:keyword"/>
+    <style id="header-elements" _name="Header Elements" map-to="xml:element-name"/>
+    <style id="formatting-elements" _name="Formatting Elements" map-to="xml:element-name"/>
+    <style id="gui-elements" _name="GUI Elements" map-to="xml:element-name"/>
+    <style id="structural-elements" _name="Structural Elements" map-to="xml:element-name"/>
   </styles>
 
   <definitions>
